results/run_DSJC1000.9_seed4_2026-02-03_004405.log
Traceback (most recent call last):
  File "/mnt/g/Nextcloud/FSU_Cloud/毕设/ILP-Algorithm-for-Graph-Colouring-Problem/runner.py", line 47, in <module>
    from driver.iterate_lp import run_iterative_lp_v2
  File "/mnt/g/Nextcloud/FSU_Cloud/毕设/ILP-Algorithm-for-Graph-Colouring-Problem/driver/iterate_lp.py", line 416
    tok2 = [inc.lock_prefix_K(UB)]
    ^
IndentationError: expected an indented block after 'else' statement on line 415
